SERVER-20833 Uninitialised value in TypeMatchExpression